HelloUltraviolet/Fixtures/RejectedSource/Statements/BindingStatementsDiagnostic/Source/Main.uv
//! Rejected statement specimen for binding diagnostic coverage.

public procedure bindingStatementsDiagnosticReference() -> i32 {
    let pointer = Ptr::null()
    return 0
}
